# 3d-video-minesweeper

./: .dockerignore  .gitignore  2players_plan.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  MULTIPLAYER_STATUS.md  README.md  SENSITIVITY_ANALYSIS.md  TECHNICAL_DOCS.md  analytics.html  ecosystem.config.cjs  implementation_plan.md  index.html  package.json  patch_renderer_v2.js  servers-local.json.example  task.md  tsconfig.json  vite.config.ts
.github/: serveur_cloudflare.txt
css/: analytics.css  drag-drop.css  style.css
docs/: ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN_MULTIPLAYER.md  MULTIPLAYER_README.md  MULTIPLAYER_STATUS.md  PROJECT_ANALYSIS.md  SENSITIVITY_ANALYSIS.md  TODO_WASM_SOLVER.md
javascripts/: FlagRenderer.js  Game.js  GeometryUtils.js  GridRenderer.js  MinesweeperSolver.js  NetworkManager.js  OrbitControls.js  ParticleSystem.js  Renderer.js  ScoreManager.js  ShaderParticles.js  SoundManager.js  UIManager.js  VideoTextureManager.js  YouTubeManager.js  affichage3d.js  config.js  demine.js  i18n.js  i18n.ts  main.js  main.ts  pnltri.min.js  three-addons.d.ts  three.js  three.min.js
server-multiplayer/: .env.example  Game.js  Game.ts  GameServer.js  GameServer.ts  GameServerNode.js  GameServerNode.ts  MinesweeperSolver.js  README.md  StatsDatabase.js  (+10 more)
shared/solver-wasm/: Cargo.toml  build.ps1
shared/solver-wasm/pkg/: package.json  solver_wasm.d.ts  solver_wasm.js  solver_wasm_bg.wasm  solver_wasm_bg.wasm.d.ts
shared/solver-wasm/src/: board.rs  gaussian.rs  lib.rs  rng.rs  solver.rs  types.rs
shared/solver-wasm/test/: equivalence.mjs
(+108 files in other folders)
