[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly Minesweeper solver for 3D Video Minesweeper"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = { version = "0.9", features = ["small_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
